# wildlife-reid

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: api.py
configs/: example_folder_dataset.yaml  frog.gcp.yaml  frog.yaml  gcp.env  sea_turtle.gcp.yaml  sea_turtle.yaml
deploy/: deploy.sh  upload_artifacts.sh  upload_model.sh
scripts/: build_index.py  evaluate.py  search.py  train_arcface.py  train_triplet.py
src/wildlife_reid/: __init__.py  config.py  embedding.py  evaluation.py  index.py  logging_utils.py  manifest.py  retrieval.py  storage.py  transforms.py
src/wildlife_reid/data/: catalog.py  datasets.py  triplet_mining.py
src/wildlife_reid/models/: __init__.py  arcface.py  backbone.py  encoder.py
src/wildlife_reid/training/: train_arcface.py  train_triplet.py
tests/: test_arcface.py  test_config.py  test_frog_dataset.py  test_index.py  test_manifest.py  test_storage.py  test_triplet_mining.py
